# JustWeather

./: .gitignore  Cargo.toml  README.md  index.html  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: airindex.rs  citysearch.rs  main.rs  weather.rs
src/assets/css/: hourly.css  main.css  nextforecast.css  now.css  searchmenu.css  topbar.css  weathersurface.css
